tests/ivg/invalid/duplicate_path_definition.ivg
format IVG-3
define path p []
define path p []
